--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,9 +1,23 @@
-<nav class = 'heder-nav'>
-  <ul class = 'menu'
-  <li class = 'menu__list'>TOP</li>
-  <li class = 'menu__list'>CONTACT</li>
-  <li class = 'menu__list menu__list--back-black'>ABOUT US</li>
-  <li class = 'menu__list'>SERVICE</li>
-  </ul>
-</nav>
-  
+.wrapper
+
+  = %render 'shared/side_bar'
+
+.chat-side
+  .header
+    .left_header
+      .left-header__title
+
+
+     
+
+    
+
+
+
+
+
+
+
+
+
+
