--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,20 +1,29 @@
+$side_header_font: 16px;
+$side_grop_name: 15px;
+$side_group_message: 11px;
+$white: #fff;
+$side_blue_dark: #253141;
+$side_blue_light: #2f3e51;
+$light_blue: #38AEF0;
+
+
 .chat {
   width: calc(100% - 300px);
-  .header {
-    box-sizing: border-box;
-    height: 100%;
-    padding: 0 40px;
+    .header {
+      box-sizing: border-box;
+      height: 100%;
+      padding: 0 40px;
     .left-header {
-      flort:left
-      &__title {
-        color: #333;
-        font-size: 20px;
-        margin-top: 35px
-      } 
-      &__members {
-        color: #999;
-        display: flex;
-        font-size: 12px;
+      float:left;
+        &__title {
+          color: #333;
+          font-size: 20px;
+          margin-top: 35px;
+        } 
+        &__members {
+          color: #999;
+          display: flex;
+          font-size: 12px;
         margin-top: 15px;
         .member {
           display: inline-block;
@@ -22,13 +31,15 @@
         }
       }
     }
-      border: solid; 1px
+    .right-header {
+      border: 1px solid  $light_blue;
       color: $light_blue;
       float: right;
       height: 40px;
       line-height: 40px;
       margin-top: 28px;
-      padding: 0 20px;order: solid; 1px
+      padding: 0 20px;
+      border: solid; 
 
     }
   }
