--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -20,4 +20,10 @@
         グループ名
       .group__message
         新着メッセージ
+    .group
+      .grop__name
+        グループ名
+      .grop__message
+        新着メッセージ
+        
       
