--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -11,7 +11,7 @@ $light_blue: #38AEF0;
   width: calc(100% - 300px);
     .header {
       box-sizing: border-box;
-      height: 100%;
+      height: 100px;
       padding: 0 40px;
     .left-header {
       float:left;
