--- a/app/assets/stylesheets/_vendor_prefix.scss
+++ b/app/assets/stylesheets/_vendor_prefix.scss
@@ -1,4 +1,4 @@
-$prefixes: webkit, moz, ms, o, '';
+$prefixes: -webkit-, -moz-, -ms-, -o-, '';
 @mixin flexbox {
   @each $prefix in $prefixes {
     display: #{$prefix}flex;
