--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -46,6 +46,7 @@
         .lower-meesage
           .lower-message__content
             メッセージ
+    
     .form
       %form
         %input.form__message
@@ -53,3 +54,4 @@
           %label.form__mask__image
             = fa_icon 'picture-o', class: 'icon'
             %input.hidden{type: 'file'}
+        %input.form__submit{type: 'submit', value: 'Send'}
