--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,8 @@
  @import "./colors";
  @import "./font-size";
  @import "./side_bar";
- @import "./messages";
  @import "./chat.scss";
+ @import "./user";
+ @import "./messages";
 
  
