--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -13,7 +13,7 @@
             メンバー名
           %Li.member
             メンバー名
-          %Li.member
+          %Li.member5
           メンバー名
       .right-header
         .right-header__button
