--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
  @import "./font-size";
  @import "./side_bar";
  @import "./chat.scss";
- @import "./users";
+ @import "./user";
  @import "./group";
  @import "./messages";
 
