--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -1,5 +1,5 @@
 .side-bar
-  .header 
+  .header
     %h3.header__name
       = current_user.name
     %ul.header__lists
@@ -9,22 +9,11 @@
       %li.list
         = link_to edit_user_path(current_user) do
           = fa_icon 'cog', class: 'icon'
-  
-  .groups 
-    .group  
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group
-      .grop__name
-        グループ名
-      .grop__message
-        新着メッセージ
-        
-      
+  .groups
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .group__name
+            = group.name
+          .group__message
+            メッセージはまだありません。
