--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -33,10 +33,11 @@
       box-sizing: border-box;
       padding: 20px 0 40px;
       &__name {
-        font-size: $side_group_name;
-        
+        color: $white;
+        font-size: $side_group_name;      
       }
       &__message {
+        color: $white;
         font-size: $side_group_message;
         margin-top: 5px;
       }
