--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,7 +17,9 @@
           メンバー名
       .right-header
         .right-header__button
-          Edit
+          = link_to edit_user_path(current_user) do
+            Edit
+          
     .messages
       = render partial: 'message', collection: @messages
 
