--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   color: $white;
   width: 300px;
+  position: relative;
+
   .header {
     background-color: $side_blue_dark;
     height: 100px;
