--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,5 +1,8 @@
 .chat {
   width: calc(100% - 300px);
+  height: 100vh;
+  position: relative;
+  overflow: scroll;
     .header {
       box-sizing: border-box;
       height: 100px;
@@ -33,6 +36,7 @@
       &__button {
         color: $light_blue;
         text-decoration: none;
+        
       }
     }
   }
@@ -40,8 +44,12 @@
   .messages {
     background-color: #FAFAFA;
     box-sizing: border-box;
-    padding: 46px 40px 0;
-    height: calc(100% - 100px - 90px);
+    padding: 46px 40px 90px;
+    
+    // height: calc(100vh - 100px - 90px);
+    // position: relative;
+
+    
     .message {
       .upper-message {
         display: flex;
@@ -71,7 +79,10 @@
     background-color: #DDDDDD;
     box-sizing: border-box;
     height: 90px;
+    width: calc(100% - 300px);
     padding: 20px 50px 20px 40px;
+    bottom: 0;
+    position: fixed;
     &__message {
       border: none;
       float: left; 
@@ -101,6 +112,7 @@
       height: 50px;
       margin-left: 15px;
       padding: 0 30px;
+      
     }
   }
 }
