--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -2,11 +2,12 @@
   width: calc(100% - 300px);
   height: 100vh;
   position: relative;
-  overflow: scroll;
-    .header {
-      box-sizing: border-box;
-      height: 100px;
-      padding: 0 40px;
+  overflow: hidden;
+  
+  .header {
+    box-sizing: border-box;
+    height: 100px;
+    padding: 0 40px;
     .left-header {
       float:left;
         &__title {
@@ -45,8 +46,8 @@
     background-color: #FAFAFA;
     box-sizing: border-box;
     padding: 46px 40px 90px;
-    
-    // height: calc(100vh - 100px - 90px);
+    overflow: scroll;
+    height: calc(100vh - 100px - 90px);
     // position: relative;
 
     
