--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,7 +17,7 @@
           メンバー名
       .right-header
         .right-header__button
-          = link_to edit_user_path(current_user) do
+          = link_to edit_group_path(@group) do
             Edit
           
     .messages
