--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -21,8 +21,13 @@
     .chat-group-form__field--left
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
-      = f.collection_check_boxes :user_ids, User.all, :id, :name
-  
+      -# = f.collection_check_boxes :user_ids, User.all, :id, :name
+    
+      #chat-group-users
+        #chat-group-user-22.chat-group-user.clearfix
+          %input{:name => "chat_group[user_ids][]", :type => "hidden", :value => "22"}/
+          %p.chat-group-user__name seo_kyohei
+
     / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
     /
       <div id='chat-group-users'>
